Prevent badge icon clipping

--- a/www/web/assets/css/components.css
+++ b/www/web/assets/css/components.css
@@ -1090,7 +1090,7 @@ body {
   width: 100%;
   height: 100%;
   border-radius: 0;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .user-profile-badge--blue {
